[package]
name = "sticky"
version = "0.1.0"
edition = "2024"

[dependencies]
barnes_hut = "1.0.8"
bulirsch = "0.1.12"
csv = "1.4.0"
lin_alg = "1.3.13"
probability = "0.20.3"
rand = "0.10.0"
raylib = "5.5.1"
rayon = "1.11.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tqdm = "0.8.0"
